--- a/flying.html
+++ b/flying.html
@@ -105,15 +105,15 @@
             <div class="gallery-grid">
                 <figure>
                     <img src="img/PDX_ASDEX.png" alt="VATSIM PDX ASDEX Controller Display" class="lightbox-trigger"/>
-                    <figcaption>PDX ASDEX - Keeping an eye on every aircraft</figcaption>
+                    <figcaption>PDX ASDEX Controller Display</figcaption>
                 </figure>
                 <figure>
                     <img src="img/Seattle_Tower.png" alt="Seattle Tower View" class="lightbox-trigger"/>
-                    <figcaption>Seattle Tower - A breathtaking view of the airspace</figcaption>
+                    <figcaption>Seattle Tower Operations</figcaption>
                 </figure>
                 <figure>
                     <img src="img/ATC-Radar.png" alt="Radar Monitoring in Action" class="lightbox-trigger"/>
-                    <figcaption>Radar view - Precision in every instruction</figcaption>
+                    <figcaption>Radar Monitoring in Action</figcaption>
                 </figure>
             </div>
         
@@ -131,11 +131,11 @@
                 <div class="controller-section">
                     <h2>Controller Ratings & Achievements</h2>
                     <ul class="certifications">
-                        <li>⭐ S1 - Ground Controller - <span class="hours counter" id="s1-hours" data-target="250">0</span> hours</li>
-                        <li>⭐ S2 - Tower Controller - <span class="hours counter" id="s2-hours" data-target="180">0</span> hours</li>
-                        <li>⭐ S3 - Approach Controller - <span class="hours counter" id="s3-hours" data-target="75">0</span> hours</li>
+                        <li>⭐ S1 - Ground Controller - <span class="hours" id="s1-hours">Loading...</span> hours</li>
+                        <li>⭐ S2 - Tower Controller - <span class="hours" id="s2-hours">Loading...</span> hours</li>
+                        <li>⭐ S3 - Approach Controller - <span class="hours" id="s3-hours">Loading...</span> hours</li>
                     </ul>
-                    <h3>🎯 Total Controller Hours: <span id="controller-hours" class="counter" data-target="505">0</span></h3>
+                    <h3>🎯 Total Controller Hours: <span class="hours" id="controller-hours">Loading...</span></h3>
                 </div>
             </div>
         
