--- a/flying.html
+++ b/flying.html
@@ -154,7 +154,7 @@
                 <h2>VATSIM Controller Reviews</h2>
                 <div class="testimonial">
                     <p class="reviewer">Trenton Sergeant on <span class="position">PDX_GND</span></p>
-                    <p class="review-date">2025-02-05 00:00:00</p>
+                    <p class="review-date">2025-02-05</p>
                     <p class="review-text">
                         did really well, could tell hes new and he did great with ground traffic!
                     </p>    
@@ -164,16 +164,30 @@
                     <p class="review-signature">- unknown</p>
                     <div class="star-rating" data-rating="5"></div>
                 </div>
-            
-                <!-- <div class="testimonial">
-                    <p class="reviewer">Alex Johnson on <span class="position">PDX_TWR</span></p>
-                    <p class="review-date">2025-03-15 22:30:00</p>
+                <div class="testimonial">
+                    <p class="reviewer">Trenton Sergeant on <span class="position">PDX_GND</span></p>
+                    <p class="review-date">202-09-22</p>
                     <p class="review-text">
-                        Great sequencing tonight! Super professional and clear instructions. Appreciate the help!
+                        First time using VATSIM for ATC/Ground. Trenton was patient!
                     </p>
-                    <p class="review-signature">- N45678</p>
+                    <p>
+                        Would Fly Again: Yes
+                    </p>
+                    <p class="review-signature">- unknown</p>
+                    <div class="star-rating" data-rating="5"></div>
+                </div>
+                <div class="testimonial">
+                    <p class="reviewer">Trenton Sergeant on <span class="position">PDX_GND</span></p>
+                    <p class="review-date">202-09-22</p>
+                    <p class="review-text">
+                        Very good work for what seemed like the first few sessions on ground. Keep it up and keep practicing.
+                    </p>
+                    <p>
+                        Would Fly Again: Yes
+                    </p>
+                    <p class="review-signature">- unknown</p>
                     <div class="star-rating" data-rating="4"></div>
-                </div> -->
+                </div>
             </div>
         </section>
         
