--- a/flying.html
+++ b/flying.html
@@ -165,7 +165,7 @@
                     <div class="star-rating" data-rating="5"></div>
                 </div>
                 <div class="testimonial">
-                    <p class="reviewer">Trenton Sergeant on <span class="position">PDX_GND</span></p>
+                    <p class="reviewer">Trenton Sergeant on <span class="position">SEA_GND</span></p>
                     <p class="review-date">202-09-22</p>
                     <p class="review-text">
                         First time using VATSIM for ATC/Ground. Trenton was patient!
