--- a/flying.html
+++ b/flying.html
@@ -122,7 +122,7 @@
                 <p>
                     My journey as a **VATSIM controller** started in **July 2024**, and it has been an adrenaline-fueled adventure ever since.  
                     From a **VATSIM pilot** to an air traffic controller, I’ve developed a deep appreciation for the art of **handling live traffic**  
-                    and coordinating complex approaches at **ZSE ARTCC**. The teamwork, the rush, the challenge – it's what keeps me coming back!
+                    and coordinating at **ZSE ARTCC**. The teamwork, the rush, the challenge – it's what keeps me coming back!
                 </p>
             </div>
         
@@ -143,7 +143,7 @@
             <div class="atc-moments">
                 <h3>Memorable ATC Moments</h3>
                 <ul>
-                    <li>🚀 Successfully managed **record-breaking arrivals** at PDX.</li>
+                    <li>🚀 Semi-Successfully managed **record-breaking arrivals** at PDX.</li>
                     <!-- <li>🎤 Directed a low-visibility **ILS approach** like a pro.</li> -->
                     <!-- <li>🌍 Helped mentor new controllers at **ZSE ARTCC**.</li> -->
                     <!-- <li>⚡ Handled an emergency **Mayday situation** with precision.</li> -->
