--- a/flying.html
+++ b/flying.html
@@ -74,28 +74,6 @@
                 <a href="https://zseartcc.org" target="_blank" class="button">Visit ZSE ARTCC</a>
             </div>
         </section> -->
-        <!-- <section class="image-carousel">
-            <div class="carousel-container">
-                <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-                <div class="carousel-slide">
-                    <div class="carousel-item">
-                        <img src="img/Alaska Airlines/ASA - N487AS.png" class="carousel-image" alt="ATC Session 1">
-                        <div class="caption">Busiest night at SEA Tower!</div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/Alaska Airlines/ASA - N512AS.png" class="carousel-image" alt="ATC Session 2">
-                        <div class="caption">Guiding a heavy 777 to final.</div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/atis3.jpg" class="carousel-image" alt="ATC Session 3">
-                        <div class="caption">Foggy approach into PDX!</div>
-                    </div>
-                </div>
-                <button class="next" onclick="moveSlide(1)">&#10095;</button>
-                <div class="carousel-dots"></div>
-                <div class="progress-bar"></div>
-            </div>
-        </section> -->
         <section class="Vatsim-Controlling">
             <h2 class="glitch-text">
                 <span class="plane-icon">✈️</span> My VATSIM ATC Journey
@@ -196,6 +174,7 @@
             <span class="close-lightbox">&times;</span>
             <img id="lightbox-img" src="" alt="Expanded View">
         </div>
+        
         <section class="Vatsim-Pilot">
             <h2 class="">My VATSIM Pilot Experience</h2>
             <div>
@@ -216,6 +195,41 @@
             </div>
             <h3 class="">Total Pilot Hours: <span id="pilot-hours">Loading...</span></h3>            
         </section>
+        <!-- <section class="image-carousel">
+            <div class="carousel-container">
+                <h2>My Fleet</h2>
+                <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+                <div class="carousel-slide">
+                    <div class="carousel-item">
+                        <img src="img/Alaska Airlines/ASA - N487AS.png" class="carousel-image" alt="Alaska One World Livery">
+                        <div class="caption">Alaska One World Livery</div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Alaska Airlines/ASA - N512AS.png" class="carousel-image" alt="ATC Session 2">
+                        <div class="caption">Guiding a heavy 777 to final.</div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Alaska Airlines/ASA - N318AS.png" class="carousel-image" alt="ATC Session 3">
+                        <div class="caption">Foggy approach into PDX!</div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Freedom_One.png" class="carousel-image" alt="ATC Session 4">
+                        <div class="caption">Southwest Freedom One</div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Delta/Delta_A350.png" class="carousel-image" alt="ATC Session 5">
+                        <div class="caption">Delta A350 on a long-haul!</div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/UPS/UPS_MD11.png" class="carousel-image" alt="ATC Session 6">
+                        <div class="caption">UPS MD-11, cargo heavy!</div>
+                    </div>
+                </div>
+                <button class="next" onclick="moveSlide(1)">&#10095;</button>
+                <div class="carousel-dots"></div>
+                <div class="progress-bar"></div>
+            </div>
+        </section> -->
         <footer>
             <p><img src="/img/Progress_Pride_Flag.png">Made with passion by Hypekingfish<img src="/img/Progress_Pride_Flag.png"></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
