--- a/flying.html
+++ b/flying.html
@@ -48,7 +48,7 @@
                 <div class="airport-label right">SEA (Seattle-Tacoma Intl)</div>
             </div>                                                            
         </section>
-        <!-- <section class="virtual-zse">
+        <section class="virtual-zse">
             <h2>
                 <img src="https://zseartcc.org/new/public/images/logo_edit.png"> 
                 Virtual ZSE ARTCC 
@@ -73,7 +73,7 @@
                 <a href="https://www.vatsim.net" target="_blank" class="button">Visit VATSIM</a>
                 <a href="https://zseartcc.org" target="_blank" class="button">Visit ZSE ARTCC</a>
             </div>
-        </section> -->
+        </section>
         <section class="Vatsim-Controlling">
             <h2 class="glitch-text">
                 <span class="plane-icon">✈️</span> My VATSIM ATC Journey
@@ -195,7 +195,7 @@
             </div>
             <h3 class="">Total Pilot Hours: <span id="pilot-hours">Loading...</span></h3>            
         </section>
-        <!-- <section class="image-carousel">
+        <section class="image-carousel">
             <div class="carousel-container">
                 <h2>My Fleet</h2>
                 <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
@@ -221,15 +221,15 @@
                         <div class="caption">Delta A350 on a long-haul!</div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/UPS/UPS_MD11.png" class="carousel-image" alt="ATC Session 6">
-                        <div class="caption">UPS MD-11, cargo heavy!</div>
+                        <img src="img/SWA-N8603F.PNG" class="carousel-image" alt="SWA at KBOI">
+                        <div class="caption">SWA at KBOI</div>
                     </div>
                 </div>
                 <button class="next" onclick="moveSlide(1)">&#10095;</button>
                 <div class="carousel-dots"></div>
                 <div class="progress-bar"></div>
             </div>
-        </section> -->
+        </section>
         <footer>
             <p><img src="/img/Progress_Pride_Flag.png">Made with passion by Hypekingfish<img src="/img/Progress_Pride_Flag.png"></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
