--- a/index.html
+++ b/index.html
@@ -1,82 +1,129 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
-        <title>Hypekingfish</title>
-        <link href="style.css" rel="stylesheet">
-        <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
-        <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
-    </head>
-    <body class="container">
-        <header class="Header">
-            <h1>
-                <a href="index.html" aria-label="Go Home">
-                    <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo"/>
-                    <span>Hypekingfish</span>
-                </a>
-            </h1>
-            <button type="button" tabindex="-1" hidden></button>
-            <nav>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="flying.html">Flying</a></li>
-                    <li><a href="streaming.html">Streaming</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section class="hero">
-                <h2 class="typewriter">Welcome to my Digital Space!</h2>
-                <p>Hey there! I'm Hypekingfish - a passionate gamer, flight sim enthusiast, and content creator.</p>
-            </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Hypekingfish</title>
+    <link href="style.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
+    <script
+      src="https://kit.fontawesome.com/f78443c527.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body class="container">
+    <header class="Header">
+      <h1>
+        <a href="index.html" aria-label="Go Home">
+          <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo" />
+          <span>Hypekingfish</span>
+        </a>
+      </h1>
+      <button type="button" tabindex="-1" hidden></button>
+      <nav>
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="flying.html">Flying</a></li>
+          <li><a href="streaming.html">Streaming</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero">
+        <h2 class="typewriter">Welcome to my Digital Space!</h2>
+        <p>
+          Hey there! I'm Hypekingfish - a passionate gamer, flight sim
+          enthusiast, and content creator.
+        </p>
+      </section>
 
-            <section class="featured-content">
-                <div class="Youtube">
-                    <h3>Latest Video</h3>
-                    <iframe width="420" height="312" style="border: none;"></iframe>
-                    <p>Check out my latest flight sim adventures and gaming highlights on YouTube!</p>
-                </div>
+      <section class="featured-content">
+        <div class="Youtube">
+          <h3>Latest Video</h3>
+          <iframe width="420" height="312" style="border: none;" title="Latest YouTube video"></iframe>
+          <p>
+            Check out my latest flight sim adventures and gaming highlights on
+            YouTube!
+          </p>
+        </div>
 
-                <div class="highlights">
-                    <h3>What I Do</h3>
-                    <ul>
-                        <li>✈️ Flight Simulation</li>
-                        <li>🎮 Gaming Content</li>
-                        <li>🎥 Video Creation</li>
-                        <li>🎙️ Live Streaming</li>
-                    </ul>
-                </div>
-            </section>
-        </main>
+        <div class="highlights">
+          <h3>What I Do</h3>
+          <ul>
+            <li>✈️ Flight Simulation</li>
+            <li>🎮 Gaming Content</li>
+            <li>🎥 Video Creation</li>
+            <li>🎙️ Live Streaming</li>
+          </ul>
+        </div>
+      </section>
+    </main>
 
-        <footer>
-            <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
-            <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
-        </footer>
+    <footer>
+      <p>
+        <small
+          ><img src="img/Progress_Pride_Flag.png" /> Created with passion by
+          Hypekingfish <img src="img/Progress_Pride_Flag.png"
+        /></small>
+      </p>
+      <p>
+        <small
+          >All content &copy; of Hypekingfish, unless previous copyright
+          exists.</small
+        >
+      </p>
+    </footer>
 
-        <section class="social-links">
-            <div class="social-links">
-                <a href="https://github.com/yourusername" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-x-twitter"></i>
-                </a>
-                <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-youtube"></i>
-                </a>
-                <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-twitch"></i>
-                </a>
-                <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-discord"></i>
-                </a>
-            </div>
-        </section>
-        <script src="scripts/youtube.js"></script>
-    </body>
+    <section class="social-links">
+      <div class="social-links">
+        <a
+          href="https://github.com/yourusername"
+          aria-label="GitHub"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="fab fa-github"></i>
+        </a>
+        <a
+          href="https://twitter.com/fishnbuckjr02"
+          aria-label="Twitter"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="fab fa-x-twitter"></i>
+        </a>
+        <a
+          href="https://youtube.com/yourchannel"
+          aria-label="YouTube"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a
+          href="https://twitch.tv/hypekingfish"
+          aria-label="Twitch"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="fab fa-twitch"></i>
+        </a>
+        <a
+          href="https://discord.gg/yourdiscord"
+          aria-label="Discord"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="fab fa-discord"></i>
+        </a>
+      </div>
+    </section>
+    <script src="scripts/youtube.js"></script>
+  </body>
 </html>
