--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
@@ -25,14 +29,6 @@
           <span>Hypekingfish</span>
         </a>
       </h1>
-      <button type="button" tabindex="-1" hidden></button>
-      <nav>
-        <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="flying.html">Flying</a></li>
-          <li><a href="streaming.html">Streaming</a></li>
-        </ul>
-      </nav>
     </header>
     <main>
       <section class="hero">
@@ -46,7 +42,12 @@
       <section class="featured-content">
         <div class="Youtube">
           <h3>Latest Video</h3>
-          <iframe width="420" height="312" style="border: none;" title="Latest YouTube video"></iframe>
+          <iframe
+            width="420"
+            height="312"
+            style="border: none"
+            title="Latest YouTube video"
+          ></iframe>
           <p>
             Check out my latest flight sim adventures and gaming highlights on
             YouTube!
