added new nav menu

--- a/index.html
+++ b/index.html
@@ -21,61 +21,28 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="container">
-    <header class="Header">
-      <h1>
-        <a href="index.html" aria-label="Go Home">
-          <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo" />
-          <span>Hypekingfish</span>
-        </a>
-      </h1>
-    </header>
-    <main>
-      <section class="hero">
-        <h2 class="typewriter">Welcome to my Digital Space!</h2>
-        <p>
-          Hey there! I'm Hypekingfish - a passionate gamer, flight sim
-          enthusiast, and content creator.
-        </p>
-      </section>
-
-      <section class="featured-content">
-        <div class="Youtube">
-          <h3>Latest Video</h3>
-          <iframe
-            width="420"
-            height="312"
-            style="border: none"
-            title="Latest YouTube video"
-          ></iframe>
-          <p>
-            Check out my latest flight sim adventures and gaming highlights on
-            YouTube!
-          </p>
-        </div>
-
-        <div class="highlights">
-          <h3>What I Do</h3>
-          <ul>
-            <li>✈️ Flight Simulation</li>
-            <li>🎮 Gaming Content</li>
-            <li>🎥 Video Creation</li>
-            <li>🎙️ Live Streaming</li>
-          </ul>
-        </div>
-      </section>
-    </main>
-
+  <body>
+    <div class="topnav">
+      <a href="index.html" class="active">Hypekingfish</a>
+      <div id="myLinks">
+        <a href="about.html">About</a>
+        <a href="flying.html">Flying</a>
+        <a href="project.html">Projects</a>
+        <a href="streaming.html">streaming</a>
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
     <footer>
       <p>
         <small
-          ><img src="img/Progress_Pride_Flag.png" /> Created with passion by
-          Hypekingfish <img src="img/Progress_Pride_Flag.png"
+          ><img src="img/Progress_Pride_Flag.png" /> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"
         /></small>
       </p>
       <p>
         <small
-          >All content &copy; of Hypekingfish, unless previous copyright
+          >All content &copy; 2025 of Hypekingfish, unless previous copyright
           exists.</small
         >
       </p>
@@ -125,6 +92,7 @@
         </a>
       </div>
     </section>
+    <script src="scripts/navmenu.js"></script>
     <script src="scripts/youtube.js"></script>
   </body>
 </html>
