--- a/project.html
+++ b/project.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <title>Hypekingfish</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
@@ -18,14 +16,17 @@
     ></script>
   </head>
   <body>
-    <div class="topnav" id="myTopnav">
-        <a href="index.html" class="active">Home</a>
+    <div class="topnav">
+      <a href="index.html" class="active">Hypekingfish</a>
+      <div id="myLinks">
         <a href="about.html">About</a>
         <a href="flying.html">Flying</a>
-        <a href="streaming.html">Streaming</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
+        <a href="project.html">Projects</a>
+        <a href="streaming.html">streaming</a>
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
     </div>
     <div class="bgimg">
       <div class="topleft">
@@ -34,7 +35,7 @@
       <div class="middle">
         <h1>COMING SOON</h1>
         <hr />
-        <p>35 days</p>
+        <p id="demo"></p>
       </div>
       <div class="bottomleft">
         <p>Some text</p>
