--- a/flying.html
+++ b/flying.html
@@ -24,14 +24,14 @@
   </head>
   <body>
     <div class="topnav">
-      <a href="index.html" class="active">Hypekingfish</a>
+      <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
       <div id="myLinks">
         <a href="about.html">About</a>
         <a href="flying.html">Flying</a>
         <a href="project.html">Projects</a>
-        <a href="streaming.html">streaming</a>
+        <a href="streaming.html">Streaming</a>
       </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
     </div>
