--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   </head>
   <body>
     <div class="topnav">
-      <a href="index.html" class="active">Hypekingfish</a>
+      <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
       <div id="myLinks">
         <a href="about.html">About</a>
         <a href="flying.html">Flying</a>
         <a href="project.html">Projects</a>
-        <a href="streaming.html">streaming</a>
+        <a href="streaming.html">Streaming</a>
       </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
     </div>
@@ -47,51 +47,6 @@
         >
       </p>
     </footer>
-
-    <section class="social-links">
-      <div class="social-links">
-        <a
-          href="https://github.com/yourusername"
-          aria-label="GitHub"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="fab fa-github"></i>
-        </a>
-        <a
-          href="https://twitter.com/fishnbuckjr02"
-          aria-label="Twitter"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="fab fa-x-twitter"></i>
-        </a>
-        <a
-          href="https://youtube.com/yourchannel"
-          aria-label="YouTube"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="fab fa-youtube"></i>
-        </a>
-        <a
-          href="https://twitch.tv/hypekingfish"
-          aria-label="Twitch"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="fab fa-twitch"></i>
-        </a>
-        <a
-          href="https://discord.gg/yourdiscord"
-          aria-label="Discord"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="fab fa-discord"></i>
-        </a>
-      </div>
-    </section>
     <script src="scripts/navmenu.js"></script>
     <script src="scripts/youtube.js"></script>
   </body>
