stlyed countdown page

--- a/flying.html
+++ b/flying.html
@@ -20,9 +20,9 @@
       src="https://kit.fontawesome.com/f78443c527.js"
       crossorigin="anonymous"
     ></script>
-    <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
   </head>
   <body>
+    <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
     <div class="topnav">
       <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
       <div id="myLinks">
@@ -122,11 +122,11 @@
       <!-- About Section -->
       <div class="About-Vatsim-Controlling">
         <p>
-          My journey as a **VATSIM controller** started in **July 2024**, and it
-          has been an adrenaline-fueled adventure ever since. From a **VATSIM
-          pilot** to an air traffic controller, I’ve developed a deep
-          appreciation for the art of **handling live traffic** and coordinating
-          at **ZSE ARTCC**. The teamwork, the rush, the challenge – it's what
+          My journey as a <strong>VATSIM controller</strong> started in <strong>July 2024</strong>, and it
+          has been an adrenaline-fueled adventure ever since. From a <strong>VATSIM
+          pilot</strong> to an air traffic controller, I’ve developed a deep
+          appreciation for the art of <strong>handling live traffic</strong> and coordinating
+          at <strong>ZSE ARTCC</strong>. The teamwork, the rush, the challenge – it's what
           keeps me coming back!
         </p>
       </div>
@@ -242,7 +242,7 @@
     <div class="Icontainer">
       <div class="mySlides">
         <div class="numbertext">1 / 6</div>
-        <img src="img/Air Canada/ACA - C-FTJV.png" />
+        <img src="img/Air_Canada/ACA-C-FTJV.png" />
       </div>
       <div class="mySlides">
         <div class="numbertext">2 / 6</div>
@@ -272,7 +272,7 @@
       <div class="column">
         <img
           class="demo cursor"
-          src="img/Air Canada/ACA - C-FTJV.png"
+          src="img/Air_Canada/ACA-C-FTJV.png"
           style="width: 100%"
           onclick="currentSlide(1)"
           alt="Air Canada Boeing 737-800"
@@ -336,8 +336,7 @@
         >
       </p>
     </footer>
-    <section class="social-links">
-      <div class="social-links">
+    <div class="social-links">
         <a
           href="https://bsky.app/profile/hypekingfish.bsky.social"
           class="social-button"
@@ -437,9 +436,10 @@
         >
           <i class="fa-brands fa-youtube"></i>
         </a>
-      </div>
-    </section>
+    </div>
     <script src="scripts/atc.js"></script>
+    <script src="scripts/lightbox.js"></script>
+    <script src="scripts/carousel.js"></script>
     <script src="scripts/combined.js"></script>
     <script src="scripts/controlling.js"></script>
     <script src="scripts/pilot.js"></script>
