--- a/streaming.html
+++ b/streaming.html
@@ -2,38 +2,36 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
         <title>Hypekingfish</title>
         <link href="style.css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
     </head>
     <body class="container">
-        <header>
-            <h1>
-                <a href="index.html" aria-label="Go Home">
-                    <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo"/>
-                    Hypekingfish</span>
-                </a>
-            </h1>
-            <button type="button" tabindex="-1" hidden></button>
-            <nav>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="flying.html">Flying</a></li>
-                </ul>
-            </nav>
-        </header>
+        <div class="topnav">
+        <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
+        <div id="myLinks">
+            <a href="about.html">About</a>
+            <a href="flying.html">Flying</a>
+            <a href="project.html">Projects</a>
+            <a href="streaming.html">Streaming</a>
+        </div>
+        <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+        </div>
         <section class="twitch-embed">
             <h2 class="rainbow-text">Live on Twitch</h2>
             <div id="twitch-embed"></div>
         </section>
         <section class="mobile-message">
             <div class="mobile-message">
-                🎥 Twitch embed is hidden on mobile. Watch the stream on <a href="https://www.twitch.tv/YOUR_TWITCH_USERNAME" target="_blank">Twitch</a>!
+                🎥 Twitch embed is hidden on mobile. Watch the stream on <a href="https://www.twitch.tv/hypekingfish" target="_blank">Twitch</a>!
             </div>
         </section>
         <div class="Player">
@@ -42,7 +40,7 @@
                 new Twitch.Embed("twitch-embed", {
                     width: "100%",
                     height: 480,
-                    channel: "hypekingfish",  // Your Twitch username
+                    channel: "hypekingfish",  // Twitch channel username
                     layout: "video", // Can be "video-with-chat" or just "video"
                     theme: "dark"
                 });
@@ -52,20 +50,20 @@
             <h2 class="rainbow-text">Subscriber Badges</h2>
             <p>Thank you to all my past and future subscribers</p>
             <div class="badge_images">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-35.png" alt="2 Month Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-36.png" alt="3 Month Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-37.png" alt="6 Month Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-38.png" alt="9 Month Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-39.png" alt="12 Month Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-40.png" alt="2 Year Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-41.png" alt="3 Year Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-42.png" alt="4 Year Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-43.png" alt="5 Year Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-44.png" alt="6 Year Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-45.png" alt="7 Year Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-46.png" alt="8 Year Subscriber Badge">
-                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-47.png" alt="9 Year Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-35.png" alt="2 Month Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-36.png" alt="3 Month Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-37.png" alt="6 Month Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-38.png" alt="9 Month Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-39.png" alt="12 Month Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-40.png" alt="2 Year Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-41.png" alt="3 Year Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-42.png" alt="4 Year Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-43.png" alt="5 Year Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-44.png" alt="6 Year Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-45.png" alt="7 Year Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-46.png" alt="8 Year Subscriber Badge">
+                    <img src="/img/Matt%27s%20Masterpieces/GAMEBOY_MONTH_YEARS-47.png" alt="9 Year Subscriber Badge">
             </div>
         </section>
         <!-- *Uncomment this out when you get bit badges* -->
@@ -90,11 +88,48 @@
         </div>
         </section> -->
         <section class="donations">
-            <h2>Support the Stream</h2>
-            <p>Love the content? Consider supporting through donations!</p>
-            <a href="https://www.paypal.com/paypalme/hypekingfish" aria-label="PayPal" target="_blank" rel="noopener noreferrer" class="donate-button">Donate via PayPal</a>
-            <a href="https://ko-fi.com/fishnbuckjr02" aria-label="Ko-Fi" target="_blank" rel="noopener noreferrer" class="donate-button">Donate via Ko-Fi</a>
-        </section>           
+            <h2 class="rainbow-text">Support the Stream</h2>
+            <p>Love the content? Consider supporting through donations or other means! Your support helps keep the stream going and improves the quality of content.</p>
+            <div class="donation-buttons">
+                <a href="https://www.paypal.com/paypalme/hypekingfish" aria-label="Donate via PayPal" target="_blank" rel="noopener noreferrer" class="donate-button">
+                    <i class="fa-brands fa-paypal"></i> Donate via PayPal
+                </a>
+                <a href="https://ko-fi.com/fishnbuckjr02" aria-label="Donate via Ko-Fi" target="_blank" rel="noopener noreferrer" class="donate-button">
+                    <i class="fa-solid fa-mug-hot"></i> Donate via Ko-Fi
+                </a>
+            </div>
+            <div class="other-support">
+                <h3>Other Ways to Support</h3>
+                <ul>
+                    <li>
+                        <i class="fa-brands fa-twitch"></i>
+                        <a href="https://www.twitch.tv/hypekingfish" target="_blank" rel="noopener noreferrer">Subscribe on Twitch</a>
+                        <span>— Get custom emotes and badges!</span>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-twitter"></i>
+                        <a href="https://twitter.com/hypekingfish" target="_blank" rel="noopener noreferrer">Follow on Twitter</a>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-youtube"></i>
+                        <a href="https://www.youtube.com/@hypekingfish" target="_blank" rel="noopener noreferrer">Subscribe on YouTube</a>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-discord"></i>
+                        <a href="https://discord.gg/hypekingfish" target="_blank" rel="noopener noreferrer">Join the Discord Community</a>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-github"></i>
+                        <a href="https://github.com/Hypekingfish" target="_blank" rel="noopener noreferrer">Star on GitHub</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="donation-note">
+                <small>
+                    All donations are greatly appreciated but never required. Thank you for your support!
+                </small>
+            </div>
+        </section>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
@@ -104,37 +139,38 @@
                 <a href="https://bsky.app/profile/hypekingfish.bsky.social" class="social-button" aria-label="Bluesky" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-bluesky"></i>
                 </a>
-                <a href="https://discord.gg/yourserver" class="social-button" aria-label="Discord" target="_blank" rel="noopener noreferrer">
+                <a href="https://discord.gg/hypekingfish" class="social-button" aria-label="Discord" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-discord"></i>
                 </a>
                 <a href="https://github.com/Hypekingfish" class="social-button" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="https://www.instagram.com/yourprofile" class="social-button" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.instagram.com/hypekingfish" class="social-button" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="https://ko-fi.com/yourkofi" class="social-button" aria-label="Ko-fi" target="_blank" rel="noopener noreferrer">
+                <a href="https://ko-fi.com/fishnbuckjr02" class="social-button" aria-label="Ko-fi" target="_blank" rel="noopener noreferrer">
                     <i class="fa-solid fa-mug-hot"></i>
                 </a>
-                <a href="https://paypal.me/yourlink" class="social-button" aria-label="PayPal" target="_blank" rel="noopener noreferrer">
+                <a href="https://paypal.me/hypekingfish" class="social-button" aria-label="PayPal" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-paypal"></i>
                 </a>
-                <a href="https://steamcommunity.com/id/yourprofile" class="social-button" aria-label="Steam" target="_blank" rel="noopener noreferrer">
+                <a href="https://steamcommunity.com/id/hypekingfish" class="social-button" aria-label="Steam" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-steam"></i>
                 </a>
-                <a href="https://tiktok.com/@yourusername" class="social-button" aria-label="TikTok" target="_blank" rel="noopener noreferrer">
+                <a href="https://tiktok.com/@hypekingfish" class="social-button" aria-label="TikTok" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-tiktok"></i>
                 </a>
-                <a href="https://twitch.tv/yourchannel" class="social-button" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
+                <a href="https://twitch.tv/hypekingfish" class="social-button" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-twitch"></i>
                 </a>
-                <a href="https://twitter.com/yourprofile" class="social-button" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+                <a href="https://twitter.com/hypekingfish" class="social-button" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
-                <a href="https://www.youtube.com/@yourchannel" class="social-button" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.youtube.com/@hypekingfish" class="social-button" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-youtube"></i>
                 </a>
             </div>        
         </section>
+        <script src="scripts/navmenu.js"></script>
     </body>
 </html>
