Refactor HTML structure and enhance styling across multiple pages; added Font Awesome icons and improved navigation menus.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Hypekingfish</title>
+    <title>Hypekingfish - Home</title>
     <link href="style.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
+    <link rel="icon" type="image/x-icon" href="img/FnBLogo_FINAL_800.png" />
     <script
       src="https://kit.fontawesome.com/f78443c527.js"
       crossorigin="anonymous"
@@ -49,5 +49,9 @@
     </footer>
     <script src="scripts/navmenu.js"></script>
     <script src="scripts/youtube.js"></script>
+    <!-- If you move these scripts to the <head>, add 'defer' like:
+    <script src="scripts/navmenu.js" defer></script>
+    <script src="scripts/youtube.js" defer></script>
+    -->
   </body>
 </html>
