--- a/about.html
+++ b/about.html
@@ -10,97 +10,111 @@
         <title>Hypekingfish</title>
         <link href="style.css" rel="stylesheet"/>
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
     </head>
     <body class="container">
-        <header>
-            <h1>
-                <a href="index.html" aria-label="Go Home">
-                    <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo"/>
-                    <span>Hypekingfish</span>
-                </a>
-            </h1>
-            <button type="button" tabindex="-1" hidden></button>
-            <nav>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="flying.html">Flying</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <section class="AHeader">
+        <div class="topnav">
+        <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
+        <div id="myLinks">
+            <a href="about.html">About</a>
+            <a href="flying.html">Flying</a>
+            <a href="project.html">Projects</a>
+            <a href="streaming.html">Streaming</a>
+        </div>
+        <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+        </div>
+        <main>
+            <section class="AHeader">
             <h2>About Me</h2>
-        </section>
-        <section class="about">
-            
-            <p>Hi! I'm Hypekingfish (aka FishnBuckJr), an avid PC gamer and programming enthusiast. When I'm not coding or gaming, you can find me flying in Microsoft Flight Simulator.</p>
-            
-            <h3>Skills & Interests</h3>
-            <ul>
-                <li>Programming Languages: Python, HTML, CSS, JavaScript</li>
-                <li>Gaming: Flight Simulators, Minecraft, Factorio, and more!</li>
-                <li>Flight Simulation: Having over 1,500 hours in MSFS, I've flown just about every aircraft in the game.</li>
-                <li>Content Creation: I have been a content creator for over 4.5 years, and have experience with video editing, streaming, and more!</li>
-            </ul>
-
-            <h3>Current Projects</h3>
-            <ul>
-                <li>Personal Website Development: Building and maintaining this website</li>
-                <li>Flight Sim Content Creation: Regular streaming and video content focused on flight simulation</li>
-                <li>Programming Projects: Various coding projects (check out my Projects page!)</li>
-            </ul>
-
-            <h3>Fun Facts</h3>
-            <ul>
-                <li>Favorite Aircraft: Boeing 737-800</li>
-                <li>Most Hours in Game: Microsoft Flight Simulator 2020 (1,500+)</li>
-            </ul>
-        </section>
-        <section class="Wallpaper_Engine">
-            <h2>Check Out my Wallpaper's</h2>
-            <div class="grid">
-                    <figure>
-                        <img src="img/Wallpaper Engine/Rivian RS1 snow.png" alt="Forza Horizon 5 Rivian RS1"/>
-                        <figcaption>
-                            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3399058846" target="_blank" rel="noopener noreferrer">
-                                Click Here to get this Wallpaper
-                            </a>
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="/img/Wallpaper Engine/Porsche GT3 RS snow.png" alt="Porsche 911 GT3 RS"/>
-                        <figcaption>
-                            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3399251831" target="_blank" rel="noopener noreferrer">
-                                Click Here to get this Wallpaper
-                            </a>
-                        </figcaption>
-                    </figure>
+            </section>
+            <section class="about">
+            <p>
+                Hi! I'm <strong>Hypekingfish</strong> (aka FishnBuckJr), an avid PC gamer and programming enthusiast. When I'm not coding or gaming, you can find me flying in Microsoft Flight Simulator.
+            </p>
+            <div class="about-columns">
+                <div>
+                <h3>Skills & Interests</h3>
+                <ul>
+                    <li><strong>Programming:</strong> Python, HTML, CSS, JavaScript</li>
+                    <li><strong>Gaming:</strong> Flight Simulators, Minecraft, Factorio, and more!</li>
+                    <li><strong>Flight Simulation:</strong> 1,500+ hours in MSFS, flown nearly every aircraft.</li>
+                    <li><strong>Content Creation:</strong> 4.5+ years of video editing, streaming, and more!</li>
+                </ul>
+                </div>
+                <div>
+                <h3>Current Projects</h3>
+                <ul>
+                    <li>Personal Website Development</li>
+                    <li>Flight Sim Content Creation</li>
+                    <li>Programming Projects (<a href="project.html">see Projects page</a>)</li>
+                </ul>
+                <h3>Fun Facts</h3>
+                <ul>
+                    <li><strong>Favorite Aircraft:</strong> Boeing 737-800</li>
+                    <li><strong>Most Hours in Game:</strong> MSFS 2020 (1,500+)</li>
+                </ul>
+                </div>
             </div>
-        </section>
-        <footer>
-            <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
-            <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
-        </footer>
-        <section class="social-links">
-            <div class="social-links">
+            </section>
+            <section class="Wallpaper_Engine">
+            <h2>Check Out My Wallpapers</h2>
+            <div class="wallpaper-grid">
+                <figure>
+                <img src="img/Wallpaper Engine/Rivian RS1 snow.png" alt="Forza Horizon 5 Rivian RS1"/>
+                <figcaption>
+                    <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3399058846" target="_blank" rel="noopener noreferrer">
+                    Get this Wallpaper
+                    </a>
+                </figcaption>
+                </figure>
+                <figure>
+                <img src="/img/Wallpaper Engine/Porsche GT3 RS snow.png" alt="Porsche 911 GT3 RS"/>
+                <figcaption>
+                    <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3399251831" target="_blank" rel="noopener noreferrer">
+                    Get this Wallpaper
+                    </a>
+                </figcaption>
+                </figure>
+            </div>
+            </section>
+            <section class="social-links">
+            <h2>Connect with Me</h2>
+            <div class="social-icons">
                 <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-github"></i>
+                <i class="fab fa-github"></i>
                 </a>
                 <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-x-twitter"></i>
+                <i class="fab fa-x-twitter"></i>
                 </a>
                 <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-youtube"></i>
+                <i class="fab fa-youtube"></i>
                 </a>
                 <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-twitch"></i>
+                <i class="fab fa-twitch"></i>
                 </a>
                 <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-discord"></i>
+                <i class="fab fa-discord"></i>
                 </a>
             </div>
-        </section>
+            </section>
+            <footer>
+            <p>
+                <small>
+                <img src="img/Progress_Pride_Flag.png" style="height:1em;vertical-align:middle;"/> 
+                Created with passion by Hypekingfish 
+                <img src="img/Progress_Pride_Flag.png" style="height:1em;vertical-align:middle;"/>
+                </small>
+            </p>
+            <p>
+                <small>
+                All content &copy; of Hypekingfish, unless previous copyright exists.
+                </small>
+            </p>
+            </footer>
+        </main>
+        <script src="scripts/navmenu.js"></script>
     </body>
 </html>
