--- a/project.html
+++ b/project.html
@@ -17,14 +17,14 @@
   </head>
   <body>
     <div class="topnav">
-      <a href="index.html" class="active">Hypekingfish</a>
+      <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
       <div id="myLinks">
         <a href="about.html">About</a>
         <a href="flying.html">Flying</a>
         <a href="project.html">Projects</a>
-        <a href="streaming.html">streaming</a>
+        <a href="streaming.html">Streaming</a>
       </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
     </div>
@@ -41,6 +41,19 @@
         <p>Some text</p>
       </div>
     </div>
+    <footer>
+      <p>
+        <small
+          ><img src="img/Progress_Pride_Flag.png" /> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"
+        /></small>
+      </p>
+      <p>
+        <small
+          >All content &copy; 2025 of Hypekingfish, unless previous copyright
+          exists.</small
+        >
+      </p>
+    </footer>
     <script src="scripts/countdown.js"></script>
     <script src="scripts/navmenu.js"></script>
   </body>
