--- a/sb-extension's.html
+++ b/sb-extension's.html
@@ -12,26 +12,18 @@
         <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
     </head>
     <body class="container">
-        <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
-        
-        <header>
-            <h1>
-                <a href="index.html" aria-label="Go Home">
-                    <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo"/>
-                    <span>Hypekingfish</span>
-                </a>
-            </h1>
-            <button type="button" tabindex="-1" hidden></button>
-            <nav>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="flying.html">Flying</a></li>
-                    <li><a href="sb-extension's.html">SB Extensions</a></li>
-                    <li><a href="streaming.html">Streaming</a></li>
-                </ul>
-            </nav>
-        </header>
-
+        <div class="topnav">
+        <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
+        <div id="myLinks">
+            <a href="about.html">About</a>
+            <a href="flying.html">Flying</a>
+            <a href="project.html">Projects</a>
+            <a href="streaming.html">Streaming</a>
+        </div>
+        <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+        </div>
         <main>
             <section>
                 <h2>Streamer Bot Extensions</h2>
