Update footer styling and add current year script for dynamic display

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
           </small>
         </p>
       </div>
+      <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
     </footer>
+    
   </body>
 </html>
