Add navigation menu script to footer for improved functionality

--- a/index.html
+++ b/index.html
@@ -106,6 +106,6 @@
       document.getElementById("year").textContent = new Date().getFullYear();
     </script>
     </footer>
-    
+    <script src="scripts/navmenu.js"></script>
   </body>
 </html>
